# shortcreator_rust

./: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/entities/: clip.rs  mod.rs  prelude.rs  ymusic.rs
